# windsor-ai-task

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  run.py  test_data_fetcher.py
